# MySimplePythonPackageExample

./: Makefile  README.md  pyproject.toml  setup.cfg
src/my_module/: main.py
test/test_my_module/: test_main.py
